objects/Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Company_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Product</label>
        <referenceTo>Company_Product__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual_Piece_price__c</fullName>
        <label>Individual Piece price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Item_Quantity__c</fullName>
        <label>Order Item Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UseUser_orderr_order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User_order</label>
        <referenceTo>User_order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Item</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>